	  through which it relates to the search term is displayed.
	* Examples will now appear in a single line delimited by a ';'.
	* Mouse wheel can now scroll through the history list.
	* When WordNet dict files couldn't be opened, the user is shown a message.
	* Relative tabs reordered based on most-used ones and complexity.
	* When no hot key could be set, Artha won't be persistent.
	* Bug in saving preferences fixed.
	* Bug in filtering invalid characters on search fixed.
	* Bug in finding relatives with more then one sense mapping fixed.
	* Few memory leakages relating GError variables are fixed.
	* Crash when a link is clicked in the About box fixed.

version 0.7.2 (Jan 31, 2009):
	* Toolbar button added for toggling Notifications
	* If the notification-daemon is missing in a the system, the notification 
	  requests sent by Artha are received by libnotify but the user doesn't 
	  see anything. This issue is fixed, by disabling notifications if the 
	  notify_init() fails.
	* Moved to .png from .svg because it is not supported in a few distros.
	* Preferences (conf file) are now saved on load pref., if its a first run
	* Preferences are now saved on every setting change, not on app. exit
	* Fixed issues in configure script
	* Changed automake script to sync with configure script
	* Both Toolbar button and menu now reads "Notify", earlier it was Notify 
	  and Notifications.
	* All characters other than alpha numeric, -, _ and blank space are stripped
	  on either side of the selection clipboard text.
	* Removed dependency on g_strcmp0() (which is present only on GLib >= 2.16) by 
	  writing a custom wrapper over strcmp. Now all the functions of GLib used by 
	  Artha are of Glib 2.10 or below.

version 0.7.1 (Jan 29, 2009):
	* Fixed Tooltip for Meronyms in relative tabs/trees.
	* Fixed tree store unreferencing when creating tree stores for relatives
	* Focus to the Query field is now set on pop-up
	* 'Report a Bug' button added to About dialog box