@@ -29,13 +29,15 @@ it succeeds. If all the above listed 4 combinations are taken up
 by other applications, Artha disables its hot key call and 
 notifications features. Hence its highly recommened that the user 
 keeps atleast one of these combinations free, so as to use all the 
-features of Artha effectively.
+features of Artha effectively. When running, the current hot key 
+set can be known from the About dialog.
 .PP
-Apart from showing the definitions/senses of a searched string with 
-usage examples, Artha also shows a word's relatives like Synonyms, 
-Antonyms, Derivatives, Pertainyms (Related noun/verb), Attributes, 
-Similar Terms, Domain/Domain Terms, Causes, Entails, 
-Hypernyms (is a kind of), Hyponyms (Kinds), 
+Definitions are categorized based on the PoS (Part of Speech - Noun, 
+Verb, Adjective and Adverb). Apart from showing the definitions/senses 
+of a searched string with usage examples, Artha also shows a word's 
+relatives like Synonyms, Antonyms, Derivatives, Pertainyms 
+(Related noun/verb), Attributes, Similar Terms, Domain/Domain Terms, 
+Causes, Entails, Hypernyms (is a kind of), Hyponyms (Kinds), 
 Holonyms (is a part of), Meronyms (Parts).
 .PP
 A word can have more then one sense i.e. it can convey more than a 
@@ -43,9 +45,9 @@ single meaning/definition. Relative words are words that are related
 to one or more senses of the searched word, by a relationship like 
 Synonym, Derivative, etc. To know which all sense a relative is 
 related to, just select the it, the corresponding senses it maps to 
-are highlighted. As per WordNet Depending on the number of senses a 
+are highlighted. As per WordNet, depending on the number of senses a 
 word has (polysemy count), it's familiarity is determined. It gets 
-displayed next to the word in the definition area. There are 7 
+displayed next to the PoS in the definition area. There are 7 
 types: extremely rare, very rare, rare, uncommon, common, familiar, 
 very familiar and extremely familiar.
 .PP
